// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/global/config/parse/env .getConfig(env) supports Azure DevOps 1`] = `
Object {
  "endpoint": "an Azure DevOps endpoint",
  "hostRules": Array [],
  "platform": "azure",
  "token": "an Azure DevOps token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports Bitbucket token 1`] = `
Object {
  "endpoint": "a bitbucket endpoint",
  "hostRules": Array [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports Bitbucket username/password 1`] = `
Object {
  "endpoint": "a bitbucket endpoint",
  "hostRules": Array [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [],
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [
    Object {
      "hostType": "github",
      "matchHost": "github.com",
      "token": "a github.com token",
    },
  ],
  "token": "a ghe token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint and gitlab.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [],
  "token": "a ghe token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub token 1`] = `
Object {
  "hostRules": Array [],
  "token": "github.com token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitLab custom endpoint 1`] = `
Object {
  "endpoint": "a gitlab endpoint",
  "hostRules": Array [],
  "platform": "gitlab",
  "token": "a gitlab token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitLab token 1`] = `
Object {
  "hostRules": Array [],
  "platform": "gitlab",
  "token": "a gitlab.com token",
}
`;
